
syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/agentpb";

package agentpb;

// The greeting service definition.
service Agent {
  rpc SubmitJob (JobRequest) returns (JobResponse) {}
}
//

message JobRequest {
  string operation = 1;
  string plugin = 2;
  string workerType = 3;
  google.protobuf.Any payload = 4;
}
// each worker can handle multiple plugins
// plugins can be Helm, kustomise etc..
// in future we should add new message for new plugin 


message HelmAppInstallRequest {
  string Version = 1;
  string RepoUrl = 2;
  string RepoName = 3;
  string Namespace = 4;
  string ChartName = 5;
  string ReleaseName = 6;
  string ReferenceID = 7;
}


message JobResponse {
  string id = 1;
  string runID = 2;
  string workflowName = 3;
}
